[package]
name = "gpio-osc-button"
version = "0.1.0"
authors = ["mads kjeldgaard <mail@madskjeldgaard.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou_osc = "0.14.0"    # The OSC API for Nannou, the creative coding framework.
rppal = "0.11.3"              # Interface for the Raspberry Pi's GPIO, I2C, PWM, SPI and UART peripherals.
